<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.RegisterActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/etUsername"
            app:layout_constraintHorizontal_bias="0.479" android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guidelineTop" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/editText_username"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etRegisterEmail"
            app:layout_constraintStart_toStartOf="@+id/etUsername" app:layout_constraintEnd_toEndOf="@+id/etUsername"
            android:hint="@string/editText_email" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etUsername"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etRegisterPassword"
            app:layout_constraintStart_toStartOf="@+id/etRegisterEmail" app:layout_constraintEnd_toEndOf="@+id/etRegisterEmail"
            android:hint="@string/editText_password" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etRegisterEmail"/>
    <Button
            android:text="@string/button_register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btnRegister" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/etRegisterPassword"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
            android:background="@drawable/tryagain_button" android:textColor="@color/colorPrimaryTextLight"/>
    <TextView
            android:text="@string/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView3" android:textAlignment="center" android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0" app:layout_constraintTop_toTopOf="@+id/guidelineBottom"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guidelineTop"
            app:layout_constraintGuide_percent="0.3"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guidelineBottom"
            app:layout_constraintGuide_percent="0.75"/>
</android.support.constraint.ConstraintLayout>