<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity"
        android:background="@color/colorPrimaryTextLight">

    <ImageView
            android:layout_width="241dp"
            android:layout_height="77dp" app:srcCompat="@drawable/foodever_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.506" android:layout_marginTop="36dp"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView2" android:textAlignment="center" android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:textAllCaps="true"
            android:layout_marginTop="4dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/editTextUsername"
            android:hint="@string/editText_username" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintHorizontal_bias="0.485"
            android:inputType="textPersonName"
            android:autofillHints=""/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/editTextPassword"
            android:hint="@string/editText_password"
            app:layout_constraintHorizontal_bias="0.495"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername" android:inputType="textPassword"
    />
    <Button
            android:text="@string/button_login"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/buttonLogin" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            android:textColor="@color/colorPrimaryTextLight" android:background="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless" app:layout_constraintHorizontal_bias="0.495"/>

    <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:background="@color/colorDivider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/textViewOr" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5" android:id="@+id/view2"
            app:layout_constraintTop_toTopOf="@+id/textViewOr"
            app:layout_constraintBottom_toBottomOf="@+id/textViewOr"/>

    <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:background="@color/colorDivider"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:id="@+id/view" app:layout_constraintStart_toEndOf="@+id/textViewOr"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="@+id/textViewOr"
            app:layout_constraintBottom_toBottomOf="@+id/textViewOr"/>
    <TextView
            android:text="@string/textView_createAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp" android:id="@+id/textViewCreateAccount" android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.502" android:textStyle="bold" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonGoogle" app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/button_facebook"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/buttonFacebook"
            android:drawableStart="@drawable/ic_facebook_logo" android:background="#3b5998"
            style="@style/Widget.AppCompat.Button.Borderless" android:textColor="@color/colorPrimaryTextLight"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintTop_toBottomOf="@+id/textViewOr" android:layout_marginTop="8dp"/>

    <Button
            android:text="@string/button_google"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/buttonGoogle"
            android:drawableStart="@drawable/ic_google_logo"
            style="@style/Widget.AppCompat.Button.Borderless" android:textColor="@color/colorPrimaryTextDark"
            android:paddingLeft="5dp" app:layout_constraintHorizontal_bias="0.504"
            android:paddingRight="5dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonFacebook"
            android:background="#EBEBEB" android:layout_marginTop="4dp"/>
    <TextView
            android:text="@string/textView_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewOr"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" app:layout_constraintStart_toEndOf="@+id/view2"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/view"/>
</android.support.constraint.ConstraintLayout>