<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.InternetConnectivityActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="151dp" app:srcCompat="@drawable/cloud_internet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView4" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guidelineTop"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guidelineTop"
            app:layout_constraintGuide_percent="0.1"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guidelineBottom"
            app:layout_constraintGuide_percent="0.4"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guidelineEnd"
            app:layout_constraintGuide_percent="0.8"/>
    <TextView
            android:text="@string/tv_oops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="@+id/guidelineBottom"
            app:layout_constraintStart_toStartOf="@+id/guidelineCenter" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/tvOops" android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.038" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineCenter" android:layout_marginEnd="8dp"
            android:textAlignment="center" android:textSize="48sp" android:layout_marginBottom="2dp"
            android:textStyle="bold"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineCenter" app:layout_constraintGuide_percent="0.5"/>
    <TextView
            android:text="@string/tv_internet_connectivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
            android:id="@+id/textView4" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvOops" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineCenter" android:layout_marginEnd="8dp"
            android:textSize="18sp" android:textAlignment="center"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/btnTryAgain"/>
    <Button
            android:text="@string/button_tryAgain"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
            android:id="@+id/btnTryAgain"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineCenter" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guidelineEnd"
            android:background="@drawable/tryagain_button" app:layout_constraintHorizontal_bias="0.518"/>
</android.support.constraint.ConstraintLayout>